force-app/main/default/objects/Reference_HRS_Termination_Transfer__c/Reference_HRS_Termination_Transfer__c.object-meta.xml
<CustomObject>
    <description>New Custom object created for HRS Termination and Transfers.  Case 16720181</description>
    <label>Reference HRS Termination/Transfer</label>
    <nameField>
        <displayFormat>HRS Term/Transfer - {000000}</displayFormat>
        <label>Reference HRS Termination/Transfer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference HRS Termination/Transfers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>