force-app/main/default/objects/Reference_HRS_Termination_Transfer__c/fields/Case_Description__c.field-meta.xml
<CustomField>
    <fullName>Case_Description__c</fullName>
    <label>Case Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Change of Entity</fullName>
            </value>
            <value>
                <fullName>COVID-19</fullName>
            </value>
            <value>
                <fullName>Dissatisfaction with Product</fullName>
            </value>
            <value>
                <fullName>Internal HR Services Transfer to Oasis</fullName>
            </value>
            <value>
                <fullName>Migration</fullName>
            </value>
            <value>
                <fullName>Negative Sale-Leaving Paychex</fullName>
            </value>
            <value>
                <fullName>Negative Sale-Moving Back to Payroll</fullName>
            </value>
            <value>
                <fullName>Out of Business</fullName>
            </value>
            <value>
                <fullName>Paychex Initiated Loss</fullName>
            </value>
            <value>
                <fullName>PR Concerns</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Service Dissatisfaction</fullName>
            </value>
            <value>
                <fullName>Short-term Sale</fullName>
            </value>
            <value>
                <fullName>Transfer within HR Services</fullName>
            </value>
            <value>
                <fullName>Utilization Satisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>