force-app/main/default/objects/Reference_HRS_Termination_Transfer__c/fields/Case_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Case_Lookup__c</fullName>
    <label>Case Number</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Reference HRS Termination/Transfers</relationshipLabel>
    <relationshipName>Reference_HRS_Termination_Transfer_s</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>