force-app/main/default/objects/Reference_HRS_Termination_Transfer__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Change of Entity</fullName>
            </value>
            <value>
                <fullName>Change of Entity-Non Loss</fullName>
            </value>
            <value>
                <fullName>Client Restarted (Previously Coded Lost)</fullName>
            </value>
            <value>
                <fullName>Internal HR Services Transfer to Oasis</fullName>
            </value>
            <value>
                <fullName>Loss Confirmed - Notice Received</fullName>
            </value>
            <value>
                <fullName>Negative Sale-Leaving Paychex</fullName>
            </value>
            <value>
                <fullName>Negative Sale-Moving back to Payroll</fullName>
            </value>
            <value>
                <fullName>Paychex Initiated Loss</fullName>
            </value>
            <value>
                <fullName>Potential Loss</fullName>
            </value>
            <value>
                <fullName>Retained</fullName>
            </value>
            <value>
                <fullName>Transfer ASO to PEO Conversion</fullName>
            </value>
            <value>
                <fullName>Transfer to Flex</fullName>
            </value>
            <value>
                <fullName>Transfer to Flex with HRE</fullName>
            </value>
            <value>
                <fullName>Transfer within HR Services</fullName>
            </value>
            <value>
                <fullName>Transfer to Flex with HRPP</fullName>
            </value>
            <value>
                <fullName>Transfer to HRPP without Flex</fullName>
            </value>
            <value>
                <fullName>Transfer to HRE without Flex</fullName>
            </value>
            <value>
                <fullName>Transfer HRPP to ASO</fullName>
            </value>
            <value>
                <fullName>Transfer HRPP to PEO</fullName>
            </value>
            <value>
                <fullName>Transfer HRPP to HRE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>