force-app/main/default/objects/Reference_HRS_Termination_Transfer__c/fields/Client_IDs_to_be_Coded_Lost__c.field-meta.xml
<CustomField>
    <fullName>Client_IDs_to_be_Coded_Lost__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client IDs to be Coded Lost</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>