force-app/main/default/objects/Reference_HRS_Termination_Transfer__c/fields/Client_needs_QE_Tax_Preparation__c.field-meta.xml
<CustomField>
    <fullName>Client_needs_QE_Tax_Preparation__c</fullName>
    <description>NOTE: If the new provider is a another PEO the client will need to have QE and YE Tax Preparation regardless of when they run with the new provider.
If client is unresponsive, enter no for QE and YE and enter a reason of Unresponsive in the Notes field.</description>
    <inlineHelpText>*PEO Losses always enter Yes.
*ASO Losses: Discuss with client and enter Yes or No.
*If the new provider is a PEO always enter Yes.
*If the client is unresponsive, enter NO and enter Unresponsive in the Notes field.</inlineHelpText>
    <label>Client needs QE Tax Preparation?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>