force-app/main/default/objects/Reference_HRS_Termination_Transfer__c/fields/Code_Lost_Date__c.field-meta.xml
<CustomField>
    <fullName>Code_Lost_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If this a QE Month (March, June, September, November) and the client is processing with a new non PEO PR provider, view the Hover Button on the field “Is this a QE/YE Month” for the QE Latest Submission Dates prior to date selection.</inlineHelpText>
    <label>Code Lost Date</label>
    <type>Date</type>
</CustomField>