force-app/main/default/objects/Reference_HRS_Termination_Transfer__c/fields/Director_of_Sales__c.field-meta.xml
<CustomField>
    <fullName>Director_of_Sales__c</fullName>
    <formula>Case_Lookup__r.Account.Owner.Manager.Manager.Manager.FirstName + &quot; &quot; + Case_Lookup__r.Account.Owner.Manager.Manager.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Director of Sales</label>
    <type>Text</type>
</CustomField>