force-app/main/default/objects/Reference_HRS_Termination_Transfer__c/fields/Employee_Count__c.field-meta.xml
<CustomField>
    <fullName>Employee_Count__c</fullName>
    <formula>Case_Lookup__r.Account.NumberOfEmployees</formula>
    <label>Employee Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>