force-app/main/default/objects/Reference_HRS_Termination_Transfer__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <label>Fiscal Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FY16</fullName>
            </value>
            <value>
                <fullName>FY17</fullName>
            </value>
            <value>
                <fullName>FY18</fullName>
            </value>
            <value>
                <fullName>FY19</fullName>
            </value>
            <value>
                <fullName>FY20</fullName>
            </value>
            <value>
                <fullName>FY21</fullName>
            </value>
            <value>
                <fullName>FY22</fullName>
            </value>
            <value>
                <fullName>FY23</fullName>
            </value>
            <value>
                <fullName>FY24</fullName>
            </value>
            <value>
                <fullName>FY25</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>