force-app/main/default/objects/Reference_HRS_Termination_Transfer__c/fields/HRG_Name__c.field-meta.xml
<CustomField>
    <fullName>HRG_Name__c</fullName>
    <formula>Case_Lookup__r.Account.HR_Generalist__r.FirstName + &quot; &quot; + Case_Lookup__r.Account.HR_Generalist__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HRG Name</label>
    <type>Text</type>
</CustomField>