force-app/main/default/objects/Reference_HRS_Termination_Transfer__c/fields/Is_this_a_QE_YE_Month__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_QE_YE_Month__c</fullName>
    <inlineHelpText>The QE cut off dates for coding the loss apply only to clients processing a PR with a new non-PEO provider prior to month end. This will ensure clients do not get duplicate tax returns.
o 6/23/22
o 9/23/22
o 12/22/22
o 3/24/23
o 6/23/23
o 9/22/23
o 12/21/23</inlineHelpText>
    <label>Is this a QE/YE Month?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>