force-app/main/default/objects/Reference_HRS_Termination_Transfer__c/fields/Old_BR_CL__c.field-meta.xml
<CustomField>
    <fullName>Old_BR_CL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Old BR/CL #</label>
    <length>18</length>
    <type>Text</type>
</CustomField>