force-app/main/default/objects/Reference_HRS_Termination_Transfer__c/fields/Parent_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Parent_Approved_Date__c</fullName>
    <formula>Parent_Ref_HRS_Termination_Transfer__r.Approved_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Approved Date</label>
    <type>Date</type>
</CustomField>