force-app/main/default/objects/Reference_HRS_Termination_Transfer__c/fields/Parent_Ref_HRS_Termination_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Parent_Ref_HRS_Termination_Transfer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be populated by code when a user clicks the Select Clients button from a Reference HRS Termination/Transfer record. The button allows the HRG to choose all of the clients going lost in a group. ClientListController.cls will populate this field.</description>
    <label>Parent Ref HRS Termination/Transfer</label>
    <referenceTo>Reference_HRS_Termination_Transfer__c</referenceTo>
    <relationshipLabel>Reference HRS Termination/Transfers</relationshipLabel>
    <relationshipName>Reference_HRS_Termination_Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>