force-app/main/default/objects/Reference_HRS_Termination_Transfer__c/fields/PR_HR_Solutions_Loss_Date_Verified__c.field-meta.xml
<CustomField>
    <fullName>PR_HR_Solutions_Loss_Date_Verified__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PR HR Solutions Loss Date Verified</label>
    <type>Date</type>
</CustomField>