force-app/main/default/objects/Reference_HRS_Termination_Transfer__c/fields/PR_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>PR_Verified_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PR Verified Date</label>
    <type>Date</type>
</CustomField>