force-app/main/default/objects/Reference_HRS_Termination_Transfer__c/fields/Primary_Tier_1_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Primary_Tier_1_Reasons__c</fullName>
    <label>Primary Tier 1 Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Transfer out of HR Services</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Internal Transfer within HR Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>