force-app/main/default/objects/Reference_HRS_Termination_Transfer__c/fields/Primary_Tier_2_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Primary_Tier_2_Reasons__c</fullName>
    <label>Primary Tier 2 Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Primary_Tier_1_Reasons__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Change of Entity</fullName>
            </value>
            <value>
                <fullName>Client Utilization Satisfied</fullName>
            </value>
            <value>
                <fullName>Dissatisfaction with HRG Service</fullName>
            </value>
            <value>
                <fullName>Dissatisfaction with Migration ASO MMS to ASO Flex</fullName>
            </value>
            <value>
                <fullName>Dissatisfaction with Migration to MPSC</fullName>
            </value>
            <value>
                <fullName>Dissatisfaction with Payroll</fullName>
            </value>
            <value>
                <fullName>Dissatisfaction with Product</fullName>
            </value>
            <value>
                <fullName>Dissatisfaction with Sales</fullName>
            </value>
            <value>
                <fullName>Internal HR Services Transfer to Oasis</fullName>
            </value>
            <value>
                <fullName>Migration ASO MMS to ASO Flex</fullName>
            </value>
            <value>
                <fullName>Migration to MPSC</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Negative Sale</fullName>
            </value>
            <value>
                <fullName>NSF</fullName>
            </value>
            <value>
                <fullName>Out of Business/Sold/Merged</fullName>
            </value>
            <value>
                <fullName>Platform Change</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>