force-app/main/default/objects/Reference_HRS_Termination_Transfer__c/fields/Primary_Tier_3_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Primary_Tier_3_Reasons__c</fullName>
    <label>Primary Tier 3 Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Primary_Tier_2_Reasons__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>401k Conversion Issues</fullName>
            </value>
            <value>
                <fullName>401k Lack of Plan Features/Variety</fullName>
            </value>
            <value>
                <fullName>401k Set-Up or Service</fullName>
            </value>
            <value>
                <fullName>401k Technology</fullName>
            </value>
            <value>
                <fullName>ASO NPR to ASO Payroll Transfer</fullName>
            </value>
            <value>
                <fullName>ASO Payroll to ASO NPR Transfer</fullName>
            </value>
            <value>
                <fullName>Billing Issues</fullName>
            </value>
            <value>
                <fullName>Business Merged with Another Client</fullName>
            </value>
            <value>
                <fullName>Business Sold</fullName>
            </value>
            <value>
                <fullName>Tier 3 Cancelled by PEO</fullName>
                <label>Cancelled by PEO</label>
            </value>
            <value>
                <fullName>Tier 3 Cancelled by Recovery</fullName>
                <label>Cancelled by Recovery</label>
            </value>
            <value>
                <fullName>Change of Entity</fullName>
            </value>
            <value>
                <fullName>Change of Legal Entity</fullName>
            </value>
            <value>
                <fullName>Tier 3 Client did not run payroll</fullName>
                <label>Client did not run payroll</label>
            </value>
            <value>
                <fullName>Client Did Not Want All/Or Enough Components/Not a Good Fit</fullName>
            </value>
            <value>
                <fullName>Client Felt Pressured by Sales Rep</fullName>
            </value>
            <value>
                <fullName>Client has Personal Relationship with Competitor</fullName>
            </value>
            <value>
                <fullName>Client is Out of Business</fullName>
            </value>
            <value>
                <fullName>Client Misunderstanding/Omission of Information</fullName>
            </value>
            <value>
                <fullName>Client Onboarding Experience</fullName>
            </value>
            <value>
                <fullName>Client Only Interested in Select Services</fullName>
            </value>
            <value>
                <fullName>Tier 3 Client only ran 1 payroll</fullName>
                <label>Client only ran 1 payroll</label>
            </value>
            <value>
                <fullName>Client ran 2 or less PEO Payrolls</fullName>
            </value>
            <value>
                <fullName>COBRA Set-up or Service</fullName>
            </value>
            <value>
                <fullName>Company Growth - Taking Services In-House</fullName>
            </value>
            <value>
                <fullName>Competitor Offered Better Price</fullName>
            </value>
            <value>
                <fullName>Compliance Issues</fullName>
            </value>
            <value>
                <fullName>Conversion of Client to ASO/PEO</fullName>
            </value>
            <value>
                <fullName>COVID-19</fullName>
            </value>
            <value>
                <fullName>Delivery/Packing Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>