force-app/main/default/objects/Reference_HRS_Termination_Transfer__c/fields/Termination_or_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Termination_or_Transfer__c</fullName>
    <label>Termination or Transfer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>