force-app/main/default/objects/Reference_HRS_Termination_Transfer__c/fields/Total_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Employees__c</fullName>
    <inlineHelpText>Total includes employees for all IDs</inlineHelpText>
    <label>Total # of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>