force-app/main/default/objects/Reference_HRS_Termination_Transfer__c/fields/Total_of_IDs__c.field-meta.xml
<CustomField>
    <fullName>Total_of_IDs__c</fullName>
    <inlineHelpText>The total number of all clients going lost</inlineHelpText>
    <label>Total # of IDs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>