force-app/main/default/objects/Reference_HRS_Termination_Transfer__c/fields/Transfer_Step__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Step__c</fullName>
    <label>Transfer Step</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Addendum/Forms sent to client</fullName>
            </value>
            <value>
                <fullName>ASO canceled in HRIS.net/waiting for payroll to run</fullName>
            </value>
            <value>
                <fullName>Case closed</fullName>
            </value>
            <value>
                <fullName>Case in Review</fullName>
            </value>
            <value>
                <fullName>Change form completed</fullName>
            </value>
            <value>
                <fullName>Payroll ran/ASO not canceled in HRIS.net</fullName>
            </value>
            <value>
                <fullName>Pricing tool/addendum scanned into ORS</fullName>
            </value>
            <value>
                <fullName>Transferred to Client Changes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>