force-app/main/default/objects/Reference_HRS_Termination_Transfer__c/fields/Transition_team_classification__c.field-meta.xml
<CustomField>
    <fullName>Transition_team_classification__c</fullName>
    <label>Transition team classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Other losses</fullName>
            </value>
            <value>
                <fullName>ASO to PEO</fullName>
            </value>
            <value>
                <fullName>Downgrading to Payroll</fullName>
            </value>
            <value>
                <fullName>Only Retaining 401k</fullName>
            </value>
            <value>
                <fullName>Recovery/Escalation Issue</fullName>
            </value>
            <value>
                <fullName>Recovery or Escalation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>