force-app/main/default/objects/Reference_HRS_Termination_Transfer__c/recordTypes/Reference_HRS_Termination_Transfer.recordType-meta.xml
<RecordType>
    <fullName>Reference_HRS_Termination_Transfer</fullName>
    <active>true</active>
    <description>New Record type for HRS Term/Transfer object</description>
    <label>Reference HRS Termination/Transfer</label>
</RecordType>