force-app/main/default/objects/Reference_HRS_Termination_Transfer__c/recordTypes/Related_Term_Transfer_Record.recordType-meta.xml
<RecordType>
    <fullName>Related_Term_Transfer_Record</fullName>
    <active>true</active>
    <label>Related Term/Transfer Record</label>
</RecordType>