force-app/main/default/objects/Reference_HRS_Termination_Transfer__c/validationRules/Fields_required_when_Termination.validationRule-meta.xml
<ValidationRule>
    <fullName>Fields_required_when_Termination</fullName>
    <active>false</active>
    <errorConditionFormula>AND
(
ISPICKVAL( Termination_or_Transfer__c, &quot;Termination&quot;),
ISBLANK( Last_Run_Date__c)
)</errorConditionFormula>
    <errorDisplayField>X1_Cloud_Updated__c</errorDisplayField>
    <errorMessage>Last Check Date is mandatory when Termination is selected</errorMessage>
</ValidationRule>