force-app/main/default/objects/Reference_HRS_Termination_Transfer__c/validationRules/First_Check_Date_with_New_Provider.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Check_Date_with_New_Provider</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
ISNULL (First_Run_Date_on_New_Platform__c),

ISPICKVAL(Processing_with_new_provider_this_month__c,&quot;Yes&quot;)

)</errorConditionFormula>
    <errorDisplayField>First_Run_Date_on_New_Platform__c</errorDisplayField>
    <errorMessage>First Check date with New Provider is required.</errorMessage>
</ValidationRule>