force-app/main/default/objects/Reference_HRS_Termination_Transfer__c/validationRules/PEO_Calendar_Lost_Month_required.validationRule-meta.xml
<ValidationRule>
    <fullName>PEO_Calendar_Lost_Month_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
ISPICKVAL( Is_this_a_PEO_Client__c,&quot;Yes&quot;),
OR(
ISPICKVAL( PEO_Calendar_Lost_Month__c,&quot;&quot;),
ISPICKVAL(  PEO_Fiscal_Year__c ,&quot;&quot;)
)
)</errorConditionFormula>
    <errorDisplayField>PEO_Calendar_Lost_Month__c</errorDisplayField>
    <errorMessage>PEO Calendar Lost Month and PEO Fiscal Year are required if Is it a PEO client is selected as Yes</errorMessage>
</ValidationRule>