force-app/main/default/objects/Reference_HRS_Termination_Transfer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Case_Lookup__c</columns>
    <columns>Case_Owner__c</columns>
    <columns>BIS_ID__c</columns>
    <columns>Branch_Client_Number__c</columns>
    <columns>Prospect_Client_Name__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>