force-app/main/default/objects/Reference_HRS_Termination_Transfer__c/listViews/Branch_80_In_Process.listView-meta.xml
<ListView>
    <fullName>Branch_80_In_Process</fullName>
    <columns>NAME</columns>
    <columns>Branch_Client_Number__c</columns>
    <columns>Prospect_Client_Name__c</columns>
    <columns>Code_Lost_Date__c</columns>
    <columns>Termination_or_Transfer__c</columns>
    <columns>Employee_Count__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Branch_Client_Number__c</field>
        <operation>startsWith</operation>
        <value>80</value>
    </filters>
    <filters>
        <field>Case_Status__c</field>
        <operation>notEqual</operation>
        <value>Solved,Closed - Duplicate</value>
    </filters>
    <filters>
        <field>Case_Owner__c</field>
        <operation>equals</operation>
        <value>John Chittenden,Gretchen Haas,Princess Rolle,Jennifer Lane</value>
    </filters>
    <filters>
        <field>Transfer_Step__c</field>
        <operation>notEqual</operation>
        <value>Change form completed</value>
    </filters>
    <filters>
        <field>Termination_Steps__c</field>
        <operation>notEqual</operation>
        <value>Change form submitted and Case Closed</value>
    </filters>
    <label>Branch 80 In Process</label>
</ListView>