force-app/main/default/objects/Reference_HRS_Termination_Transfer__c/listViews/Christina2_Transition_Cases.listView-meta.xml
<ListView>
    <fullName>Christina2_Transition_Cases</fullName>
    <columns>Case_Lookup__c</columns>
    <columns>Branch_Client_Number__c</columns>
    <columns>Prospect_Client_Name__c</columns>
    <columns>Termination_or_Transfer__c</columns>
    <columns>Notes__c</columns>
    <columns>Case_Status__c</columns>
    <columns>Code_Lost_Date__c</columns>
    <columns>Transition_team_classification__c</columns>
    <columns>First_Run_Date_on_New_Platform__c</columns>
    <columns>Transfer_Step__c</columns>
    <columns>Termination_Steps__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Case_Owner__c</field>
        <operation>equals</operation>
        <value>Christina Bird</value>
    </filters>
    <filters>
        <field>Case_Status__c</field>
        <operation>notEqual</operation>
        <value>Solved,Closed - Duplicate</value>
    </filters>
    <filters>
        <field>Parent_Ref_HRS_Termination_Transfer__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Transfer_Step__c</field>
        <operation>notEqual</operation>
        <value>Change form completed,Transferred to Client Changes</value>
    </filters>
    <filters>
        <field>Termination_Steps__c</field>
        <operation>notEqual</operation>
        <value>Change form submitted and Case Closed,Transferred to Client Changes</value>
    </filters>
    <label>Christina2- Transition Cases</label>
</ListView>